--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script defer crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script defer crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 
-  <script defer type="module" src="index.mjs"></script>
+  <script defer type="module" src="app.mjs"></script>
 </head>
 
 <body>
