--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Custom countdown timer">
 
   <title>Countdown</title>
 
@@ -12,6 +13,11 @@
 
   <script defer crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script defer crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+
+  <!-- Some preloads -->
+  <link rel="preload" href="App.mjs">
+  <link rel="preload" href="Menu.mjs">
+  <link rel="preload" href="time.mjs">
 
   <script defer type="module" src="app.mjs"></script>
 </head>
