Try fixing preloads

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <script defer crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 
   <!-- Some preloads -->
-  <link rel="preload" href="App.mjs" as="script">
-  <link rel="preload" href="Menu.mjs" as="script">
-  <link rel="preload" href="time.mjs" as="script">
+  <link crossorigin rel="preload" href="App.mjs" as="script">
+  <link crossorigin rel="preload" href="Menu.mjs" as="script">
+  <link crossorigin rel="preload" href="time.mjs" as="script">
 
   <script defer type="module" src="app.mjs"></script>
 </head>
